# gameboy-emulator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
include/: bus.h  cart.h  common.h  cpu.h  dbg.h  dma.h  emu.h  gamepad.h  instruction.h  instructions.h  interrupts.h  io.h  lcd.h  ppu.h  ppu_pipeline.h  ppu_sm.h  ram.h  stack.h  timer.h  ui.h
lib/: bus.c  cart.c  cpu.c  cpu_fetch.c  cpu_proc.c  dbg.c  dma.c  emu.c  gamepad.c  instruction.c  interrupts.c  io.c  lcd.c  ppu.c  ppu_pipeline.c  ppu_sm.c  ram.c  stack.c  timer.c  ui.c
roms/: 05.gb.battery
scripts/: prepare.sh
tests/: cart_test.cpp  cpu_tests.cpp  stack_tests.cpp
